// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`native render parity > matches the frozen render contract for aggregate plan hashes across sections 1`] = `
{
  "aggregatePlanHash": "7e64b2688ce593e37fc845b16d95e2fafd0c05374dd49efb4551aa10ab7e5929",
  "sectionPlanHashes": {
    "docs": "2a6c6936ff5934d92275e3ca8d0a311b88c6a3a4aa3a3a185aec3a74ed62bec9",
    "src": "ea49b2f1526f35a9c915bdd40392adc6aa5038c4fae60efbff877d13ff209961",
  },
}
`;

exports[`native render parity > matches the frozen render contract for json section rendering 1`] = `
{
  "fileContentHashes": {
    "src/alpha.ts": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
    "src/guide.md": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
    "src/index.ts": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
    "src/zeta.txt": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
  },
  "fileSpans": {},
  "fileTokenCounts": {
    "src/alpha.ts": 7,
    "src/guide.md": 13,
    "src/index.ts": 7,
    "src/zeta.txt": 5,
  },
  "outputText": "{
  "fileSummary": {
    "generationHeader": "This file is a merged representation of the entire codebase, combined into a single document by Repomix.\\nThe content has been processed where content has been formatted for parsing in json style, security check has been disabled.",
    "purpose": "This file contains a packed representation of the entire repository's contents.\\nIt is designed to be easily consumable by AI systems for analysis, code review,\\nor other automated processes.",
    "fileFormat": "The content is organized as follows:\\n1. This summary section\\n2. Repository information\\n3. Directory structure\\n4. Repository files, each consisting of:\\n   - File path as a key\\n   - Full contents of the file as the value",
    "usageGuidelines": "- This file should be treated as read-only. Any changes should be made to the\\n  original repository files, not this packed version.\\n- When processing this file, use the file path to distinguish\\n  between different files in the repository.\\n- Be aware that this file may contain sensitive information. Handle it with\\n  the same level of security as you would the original repository.\\n- Pay special attention to the Repository Description. These contain important context and guidelines specific to this project.",
    "notes": "- Some files may have been excluded based on .gitignore rules and Repomix's configuration\\n- Binary files are not included in this packed representation. Please refer to the Repository Structure section for a complete list of file paths, including binary files\\n- Content has been formatted for parsing in json style\\n- Long base64 data strings (e.g., data:image/png;base64,...) have been truncated to reduce token count\\n- Security check has been disabled - content may contain sensitive information"
  },
  "userProvidedHeader": "cx section handover\\nartifact: deterministic section snapshot for human and AI review.\\n\\n<section_identity>\\nproject: demo\\nsection: src\\nstyle: json\\nfiles: 4\\noutput: section-output.txt\\n</section_identity>\\n\\n<usage>\\nreview and cite the logical paths in this snapshot, but make repository edits in the original source tree.\\n</usage>\\n\\n<path_semantics>\\neach logical path points to the original repository location for that file.\\n</path_semantics>\\n\\n<authoritative_semantics>\\ncx-meta, cx-policy, archive markers, manifests, and validation rules remain canonical.\\n</authoritative_semantics>\\n\\n<shared_context>\\nkeep this file together with the shared handover when handing off multiple sections.\\n</shared_context>",
  "directoryStructure": "src/\\n  alpha.ts\\n  guide.md\\n  index.ts\\n  zeta.txt",
  "files": {
    "src/alpha.ts": "export const alpha = 1;",
    "src/guide.md": "# Guide\\n\\n\`\`\`ts\\nconst x = 1;\\n\`\`\`",
    "src/index.ts": "export const ok = 1;",
    "src/zeta.txt": "before </file> after"
  }
}",
  "planHash": "e7e3eae7846b96fc500d8920716500397c4692a18cee414cd69bc50312344e1a",
  "structuredPlan": {
    "entries": [
      {
        "content": "export const alpha = 1;",
        "language": "typescript",
        "path": "src/alpha.ts",
        "sha256": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
        "tokenCount": 7,
      },
      {
        "content": "# Guide

\`\`\`ts
const x = 1;
\`\`\`",
        "language": "markdown",
        "path": "src/guide.md",
        "sha256": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
        "tokenCount": 13,
      },
      {
        "content": "export const ok = 1;",
        "language": "typescript",
        "path": "src/index.ts",
        "sha256": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
        "tokenCount": 7,
      },
      {
        "content": "before </file> after",
        "path": "src/zeta.txt",
        "sha256": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
        "tokenCount": 5,
      },
    ],
    "ordering": [
      "src/alpha.ts",
      "src/guide.md",
      "src/index.ts",
      "src/zeta.txt",
    ],
  },
  "warnings": [],
}
`;

exports[`native render parity > matches the frozen render contract for markdown section rendering 1`] = `
{
  "fileContentHashes": {
    "src/alpha.ts": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
    "src/guide.md": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
    "src/index.ts": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
    "src/zeta.txt": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
  },
  "fileSpans": {
    "src/alpha.ts": {
      "outputEndLine": 77,
      "outputStartLine": 77,
    },
    "src/guide.md": {
      "outputEndLine": 86,
      "outputStartLine": 82,
    },
    "src/index.ts": {
      "outputEndLine": 91,
      "outputStartLine": 91,
    },
    "src/zeta.txt": {
      "outputEndLine": 96,
      "outputStartLine": 96,
    },
  },
  "fileTokenCounts": {
    "src/alpha.ts": 7,
    "src/guide.md": 13,
    "src/index.ts": 7,
    "src/zeta.txt": 5,
  },
  "outputText": "This file is a merged representation of the entire codebase, combined into a single document by Repomix.
The content has been processed where security check has been disabled.

# File Summary

## Purpose
This file contains a packed representation of the entire repository's contents.
It is designed to be easily consumable by AI systems for analysis, code review,
or other automated processes.

## File Format
The content is organized as follows:
1. This summary section
2. Repository information
3. Directory structure
4. Repository files (if enabled)
5. Multiple file entries, each consisting of:
  a. A header with the file path (## File: path/to/file)
  b. The full contents of the file in a code block

## Usage Guidelines
- This file should be treated as read-only. Any changes should be made to the
  original repository files, not this packed version.
- When processing this file, use the file path to distinguish
  between different files in the repository.
- Be aware that this file may contain sensitive information. Handle it with
  the same level of security as you would the original repository.
- Pay special attention to the Repository Description. These contain important context and guidelines specific to this project.

## Notes
- Some files may have been excluded based on .gitignore rules and Repomix's configuration
- Binary files are not included in this packed representation. Please refer to the Repository Structure section for a complete list of file paths, including binary files
- Long base64 data strings (e.g., data:image/png;base64,...) have been truncated to reduce token count
- Security check has been disabled - content may contain sensitive information

# User Provided Header
cx section handover
artifact: deterministic section snapshot for human and AI review.

<section_identity>
project: demo
section: src
style: markdown
files: 4
output: section-output.txt
</section_identity>

<usage>
review and cite the logical paths in this snapshot, but make repository edits in the original source tree.
</usage>

<path_semantics>
each logical path points to the original repository location for that file.
</path_semantics>

<authoritative_semantics>
cx-meta, cx-policy, archive markers, manifests, and validation rules remain canonical.
</authoritative_semantics>

<shared_context>
keep this file together with the shared handover when handing off multiple sections.
</shared_context>

# Directory Structure
\`\`\`
src/
  alpha.ts
  guide.md
  index.ts
  zeta.txt
\`\`\`

# Files

## File: src/alpha.ts
\`\`\`\`typescript
export const alpha = 1;
\`\`\`\`

## File: src/guide.md
\`\`\`\`markdown
# Guide

\`\`\`ts
const x = 1;
\`\`\`
\`\`\`\`

## File: src/index.ts
\`\`\`\`typescript
export const ok = 1;
\`\`\`\`

## File: src/zeta.txt
\`\`\`\`
before </file> after
\`\`\`\`
",
  "planHash": "e7e3eae7846b96fc500d8920716500397c4692a18cee414cd69bc50312344e1a",
  "structuredPlan": {
    "entries": [
      {
        "content": "export const alpha = 1;",
        "language": "typescript",
        "path": "src/alpha.ts",
        "sha256": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
        "tokenCount": 7,
      },
      {
        "content": "# Guide

\`\`\`ts
const x = 1;
\`\`\`",
        "language": "markdown",
        "path": "src/guide.md",
        "sha256": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
        "tokenCount": 13,
      },
      {
        "content": "export const ok = 1;",
        "language": "typescript",
        "path": "src/index.ts",
        "sha256": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
        "tokenCount": 7,
      },
      {
        "content": "before </file> after",
        "path": "src/zeta.txt",
        "sha256": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
        "tokenCount": 5,
      },
    ],
    "ordering": [
      "src/alpha.ts",
      "src/guide.md",
      "src/index.ts",
      "src/zeta.txt",
    ],
  },
  "warnings": [],
}
`;

exports[`native render parity > matches the frozen render contract for plain section rendering 1`] = `
{
  "fileContentHashes": {
    "src/alpha.ts": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
    "src/guide.md": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
    "src/index.ts": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
    "src/zeta.txt": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
  },
  "fileSpans": {
    "src/alpha.ts": {
      "outputEndLine": 92,
      "outputStartLine": 92,
    },
    "src/guide.md": {
      "outputEndLine": 101,
      "outputStartLine": 97,
    },
    "src/index.ts": {
      "outputEndLine": 106,
      "outputStartLine": 106,
    },
    "src/zeta.txt": {
      "outputEndLine": 111,
      "outputStartLine": 111,
    },
  },
  "fileTokenCounts": {
    "src/alpha.ts": 7,
    "src/guide.md": 13,
    "src/index.ts": 7,
    "src/zeta.txt": 5,
  },
  "outputText": "This file is a merged representation of the entire codebase, combined into a single document by Repomix.
The content has been processed where security check has been disabled.

================================================================
File Summary
================================================================

Purpose:
--------
This file contains a packed representation of the entire repository's contents.
It is designed to be easily consumable by AI systems for analysis, code review,
or other automated processes.

File Format:
------------
The content is organized as follows:
1. This summary section
2. Repository information
3. Directory structure
4. Repository files (if enabled)
5. Multiple file entries, each consisting of:
  a. A separator line (================)
  b. The file path (File: path/to/file)
  c. Another separator line
  d. The full contents of the file
  e. A blank line

Usage Guidelines:
-----------------
- This file should be treated as read-only. Any changes should be made to the
  original repository files, not this packed version.
- When processing this file, use the file path to distinguish
  between different files in the repository.
- Be aware that this file may contain sensitive information. Handle it with
  the same level of security as you would the original repository.
- Pay special attention to the Repository Description. These contain important context and guidelines specific to this project.

Notes:
------
- Some files may have been excluded based on .gitignore rules and Repomix's configuration
- Binary files are not included in this packed representation. Please refer to the Repository Structure section for a complete list of file paths, including binary files
- Long base64 data strings (e.g., data:image/png;base64,...) have been truncated to reduce token count
- Security check has been disabled - content may contain sensitive information


================================================================
User Provided Header
================================================================
cx section handover
artifact: deterministic section snapshot for human and AI review.

<section_identity>
project: demo
section: src
style: plain
files: 4
output: section-output.txt
</section_identity>

<usage>
review and cite the logical paths in this snapshot, but make repository edits in the original source tree.
</usage>

<path_semantics>
each logical path points to the original repository location for that file.
</path_semantics>

<authoritative_semantics>
cx-meta, cx-policy, archive markers, manifests, and validation rules remain canonical.
</authoritative_semantics>

<shared_context>
keep this file together with the shared handover when handing off multiple sections.
</shared_context>

================================================================
Directory Structure
================================================================
src/
  alpha.ts
  guide.md
  index.ts
  zeta.txt

================================================================
Files
================================================================

================
File: src/alpha.ts
================
export const alpha = 1;

================
File: src/guide.md
================
# Guide

\`\`\`ts
const x = 1;
\`\`\`

================
File: src/index.ts
================
export const ok = 1;

================
File: src/zeta.txt
================
before </file> after





================================================================
End of Codebase
================================================================
",
  "planHash": "e7e3eae7846b96fc500d8920716500397c4692a18cee414cd69bc50312344e1a",
  "structuredPlan": {
    "entries": [
      {
        "content": "export const alpha = 1;",
        "language": "typescript",
        "path": "src/alpha.ts",
        "sha256": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
        "tokenCount": 7,
      },
      {
        "content": "# Guide

\`\`\`ts
const x = 1;
\`\`\`",
        "language": "markdown",
        "path": "src/guide.md",
        "sha256": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
        "tokenCount": 13,
      },
      {
        "content": "export const ok = 1;",
        "language": "typescript",
        "path": "src/index.ts",
        "sha256": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
        "tokenCount": 7,
      },
      {
        "content": "before </file> after",
        "path": "src/zeta.txt",
        "sha256": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
        "tokenCount": 5,
      },
    ],
    "ordering": [
      "src/alpha.ts",
      "src/guide.md",
      "src/index.ts",
      "src/zeta.txt",
    ],
  },
  "warnings": [],
}
`;

exports[`native render parity > matches the frozen render contract for xml section rendering 1`] = `
{
  "fileContentHashes": {
    "src/alpha.ts": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
    "src/guide.md": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
    "src/index.ts": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
    "src/zeta.txt": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
  },
  "fileSpans": {
    "src/alpha.ts": {
      "outputEndLine": 84,
      "outputStartLine": 84,
    },
    "src/guide.md": {
      "outputEndLine": 92,
      "outputStartLine": 88,
    },
    "src/index.ts": {
      "outputEndLine": 96,
      "outputStartLine": 96,
    },
    "src/zeta.txt": {
      "outputEndLine": 100,
      "outputStartLine": 100,
    },
  },
  "fileTokenCounts": {
    "src/alpha.ts": 7,
    "src/guide.md": 13,
    "src/index.ts": 7,
    "src/zeta.txt": 5,
  },
  "outputText": "This file is a merged representation of the entire codebase, combined into a single document by Repomix.
The content has been processed where security check has been disabled.

<file_summary>
This section contains a summary of this file.

<purpose>
This file contains a packed representation of the entire repository's contents.
It is designed to be easily consumable by AI systems for analysis, code review,
or other automated processes.
</purpose>

<file_format>
The content is organized as follows:
1. This summary section
2. Repository information
3. Directory structure
4. Repository files (if enabled)
5. Multiple file entries, each consisting of:
  - File path as an attribute
  - Full contents of the file
</file_format>

<usage_guidelines>
- This file should be treated as read-only. Any changes should be made to the
  original repository files, not this packed version.
- When processing this file, use the file path to distinguish
  between different files in the repository.
- Be aware that this file may contain sensitive information. Handle it with
  the same level of security as you would the original repository.
- Pay special attention to the Repository Description. These contain important context and guidelines specific to this project.
</usage_guidelines>

<notes>
- Some files may have been excluded based on .gitignore rules and Repomix's configuration
- Binary files are not included in this packed representation. Please refer to the Repository Structure section for a complete list of file paths, including binary files
- Long base64 data strings (e.g., data:image/png;base64,...) have been truncated to reduce token count
- Security check has been disabled - content may contain sensitive information
</notes>

</file_summary>

<user_provided_header>
cx section handover
artifact: deterministic section snapshot for human and AI review.

<section_identity>
project: demo
section: src
style: xml
files: 4
output: section-output.txt
</section_identity>

<usage>
review and cite the logical paths in this snapshot, but make repository edits in the original source tree.
</usage>

<path_semantics>
each logical path points to the original repository location for that file.
</path_semantics>

<authoritative_semantics>
cx-meta, cx-policy, archive markers, manifests, and validation rules remain canonical.
</authoritative_semantics>

<shared_context>
keep this file together with the shared handover when handing off multiple sections.
</shared_context>
</user_provided_header>

<directory_structure>
src/
  alpha.ts
  guide.md
  index.ts
  zeta.txt
</directory_structure>

<files>
This section contains the contents of the repository's files.

<file path="src/alpha.ts">
export const alpha = 1;
</file>

<file path="src/guide.md">
# Guide

\`\`\`ts
const x = 1;
\`\`\`
</file>

<file path="src/index.ts">
export const ok = 1;
</file>

<file path="src/zeta.txt">
before </file> after
</file>

</files>
",
  "planHash": "e7e3eae7846b96fc500d8920716500397c4692a18cee414cd69bc50312344e1a",
  "structuredPlan": {
    "entries": [
      {
        "content": "export const alpha = 1;",
        "language": "typescript",
        "path": "src/alpha.ts",
        "sha256": "997c37bd0c60dfa955c1b4dee28d4fb15323576eb89e9caab1aad55c4f0f74f0",
        "tokenCount": 7,
      },
      {
        "content": "# Guide

\`\`\`ts
const x = 1;
\`\`\`",
        "language": "markdown",
        "path": "src/guide.md",
        "sha256": "a60b50d5b91ed2e4a3e71ec0f55a10d5614b4fd36933b37cbf025548eefc97bb",
        "tokenCount": 13,
      },
      {
        "content": "export const ok = 1;",
        "language": "typescript",
        "path": "src/index.ts",
        "sha256": "805a836c21c1986caf6282f6be5b3ee560b45739e1825f5cd6e25e9111782b17",
        "tokenCount": 7,
      },
      {
        "content": "before </file> after",
        "path": "src/zeta.txt",
        "sha256": "ca3429de04fec50673fa65c1957f46adefe2897eece1fc65468d1c9bc426f009",
        "tokenCount": 5,
      },
    ],
    "ordering": [
      "src/alpha.ts",
      "src/guide.md",
      "src/index.ts",
      "src/zeta.txt",
    ],
  },
  "warnings": [],
}
`;
